--- a/services/genes/requirements.txt
+++ b/services/genes/requirements.txt
@@ -1,8 +1,23 @@
-flask==1.0.2
-Flask-SQLAlchemy==2.3.2
-psycopg2-binary==2.7.5
-Flask-Testing==0.6.2
+blinker==1.4
+Click==7.0
 coverage==4.5.1
-flake8===3.5.0
-flask-debugtoolbar==0.10.1
-flask-cors==3.0.6
+flake8==3.5.0
+Flask==1.0.2
+Flask-Cors==3.0.6
+Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.6.2
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+mccabe==0.6.1
+numpy==1.15.2
+pandas==0.23.4
+psycopg2-binary==2.7.5
+pycodestyle==2.3.1
+pyflakes==1.6.0
+python-dateutil==2.7.3
+pytz==2018.5
+six==1.11.0
+SQLAlchemy==1.2.12
+Werkzeug==0.14.1
