--- a/services/genes/project/db/Dockerfile
+++ b/services/genes/project/db/Dockerfile
@@ -3,3 +3,6 @@ FROM postgres:10.4-alpine
 
 # run create.sql on init
 ADD create.sql /docker-entrypoint-initdb.d
+
+# copy the raw data
+COPY raw_data /raw_data
